@@ -172,7 +172,20 @@
 			<effect type="rotate" end="-720000" center="auto" time="9000000" loop="true"  />
 			</animation>
 			<visible>Skin.HasSetting(show.cdart)</visible>
+			<visible>!Container.Content(episodes)</visible>
 			<visible>!Control.HasFocus(51) + !Control.HasFocus(9500)</visible>
+		</control>
+		
+		<control type="image">
+			<right>0</right>
+			<bottom>20</bottom>
+			<width>280</width>
+			<height>157</height>
+			<aspectratio aligny="center">keep</aspectratio>
+			<texture>$VAR[ClearArt]</texture>
+			<visible>Skin.HasSetting(show.cdart)</visible>
+			<visible>Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes)</visible>
+			<visible>!Control.HasFocus(51) + !Control.HasFocus(9500)</visible>					
 		</control>
 		
 <!-- Ajout Studio Logo -->
